--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_storage: ^8.1.1
+  cloud_firestore: ^2.2.1
+
   font_awesome_flutter: ^9.0.0
   url_launcher: ^6.0.6
   cupertino_icons: ^1.0.2
