--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/projects/
   #   - images/a_dot_ham.jpeg
   # example:
   fonts:
