--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   url_launcher: ^6.0.6
   cupertino_icons: ^1.0.2
 
+  scrollable_positioned_list: ^0.2.0-nullsafety.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
